--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Nic</title>
+    <title>Nic M | Home</title>
     <meta name="description"
         content="This is an example student website for John Doe, a fictional web design student." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section class="hero">
-            <h2>Hi, I'm NM</h2>
+            <h2>Hi, I'm Nic</h2>
             <p>I am a web design student. This site is part of a hands-on class exercise to learn the basics of HTML. CSS, &ampl JavaScript.</p>
             <a href="about.html" class="button dark">Learn More About What I Learned</a>
         </section>
